fixed some layout issues, improved colours, and added more info

--- a/components.css
+++ b/components.css
@@ -5,21 +5,21 @@
 }
 
 .pressure {
-    background: #ff9900;
+    background: #f52;
 }
 
 .all-in {
-    background: #f32;
+    background: #c21;
 }
 
 .look-for {
-    background: #58f;
+    background: #47c;
 }
 
 .aggressive {
-    background: #f6c;
+    background: #c83;
 }
 
 .macro {
-    background: #4e4;
+    background: #2b2;
 }
